# MCP-web-scrapper-and-LLM-extractor

./: .env.example  .gitignore  README.md  data_comparison_gui_mockup.html  data_field.csv  db_reference.py  embedding_compare.py  extractor.py  pyproject.toml  requirements.txt  run_comparison.py  run_extractor.py  run_scraper.py  schema.py  scrapping.py  test_local.py
.cursor/: mcp.json
MCP_server/: server.py
MCP_server/utils/: web_scraper.py
models/: scraping_models.py
review_api/: __init__.py  app.py  compare_ui.py
utils/: web_scraper.py
