[project]
name = "mcp-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "mcp[cli]>=1.15.0",
    "nest-asyncio>=1.6.0",
    "playwright>=1.55.0",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
]
