[project]
name = "whed-tools"
version = "0.2.0"
description = "MCP-native pipeline for WHED higher education data extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "fastapi>=0.115.0",
    "mcp[cli]>=1.15.0",
    "nest-asyncio>=1.6.0",
    "pdfplumber>=0.11.9",
    "playwright>=1.55.0",
    "pydantic>=2.11.9",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.32.0",
]
